parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    OR
    AND
    NOT
    UNTIL
    FOR
    FOREACH
    LAST
    NEXT
    CONTINUE
    RETURN
    GROSSARROW
    LBRACKET
    RBRACKET
    AMPERSANT

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> USE ID SEMICOLON
Rule 5     declaration -> PACKAGE ID SEMICOLON
Rule 6     declaration -> SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
Rule 7     declaration -> MY var_type SEMICOLON
Rule 8     declaration -> MY var_type assign_type expression SEMICOLON
Rule 9     declaration -> MY LPAREN param_list RPAREN SEMICOLON
Rule 10    declaration -> MY LPAREN param_list RPAREN assign_type expression SEMICOLON
Rule 11    param_list -> var_type comma_var_type
Rule 12    param_list -> empty
Rule 13    comma_var_type -> comma_var_type COMMA var_type
Rule 14    comma_var_type -> COMMA var_type
Rule 15    comma_var_type -> empty
Rule 16    var_type -> DOLLAR ID
Rule 17    var_type -> AT ID
Rule 18    var_type -> PERCENT ID
Rule 19    assign_type -> ASSIGN
Rule 20    assign_type -> PLUS_ASSIGN
Rule 21    assign_type -> MINUS_ASSIGN
Rule 22    assign_type -> MULTIPLY_ASSIGN
Rule 23    assign_type -> DIVIDE_ASSIGN
Rule 24    assign_type -> MOD_ASSIGN
Rule 25    assign_type -> POW_ASSIGN
Rule 26    statement_list -> statement_list statement SEMICOLON
Rule 27    statement_list -> statement SEMICOLON
Rule 28    statement_list -> empty
Rule 29    statement -> IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK
Rule 30    statement -> IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK ELSE LBLOCK statement_list RBLOCK
Rule 31    statement -> PRINT STRING
Rule 32    statement -> WHILE LPAREN relop RPAREN LBLOCK statement_list RBLOCK
Rule 33    expression_list -> expression_listitems comma_expression
Rule 34    expression_list -> comma_expression
Rule 35    expression_list -> empty
Rule 36    expression_listitems -> expression_listitems comma_expression
Rule 37    expression_listitems -> expression
Rule 38    comma_expression -> COMMA expression
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression MODULUS expression
Rule 44    expression -> INTEGER
Rule 45    expression -> HEX
Rule 46    expression -> FLOAT
Rule 47    expression -> STRING
Rule 48    expression -> LPAREN expression RPAREN
Rule 49    expression -> ID LPAREN expression_list RPAREN
Rule 50    expression -> var_type
Rule 51    expression -> MINUS expression
Rule 52    expression -> PLUS expression
Rule 53    relop -> relop_number
Rule 54    relop -> relop_string
Rule 55    relop_number -> ISEQUAL
Rule 56    relop_number -> NOTEQUAL
Rule 57    relop_number -> GREATER
Rule 58    relop_number -> GREATEREQUAL
Rule 59    relop_number -> LESS
Rule 60    relop_number -> LESSEQUAL
Rule 61    relop_number -> COMP
Rule 62    relop_string -> ISEQUAL_STRING
Rule 63    relop_string -> NOTEQUAL_STRING
Rule 64    relop_string -> GREATER_STRING
Rule 65    relop_string -> GREATEREQUAL_STRING
Rule 66    relop_string -> LESS_STRING
Rule 67    relop_string -> LESSEQUAL_STRING
Rule 68    relop_string -> COMP_STRING
Rule 69    empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 
AND                  : 
ASSIGN               : 19
AT                   : 17
COMMA                : 13 14 38
COMP                 : 61
COMP_STRING          : 68
CONTINUE             : 
DIVIDE               : 42
DIVIDE_ASSIGN        : 23
DOLLAR               : 16
ELSE                 : 30
FLOAT                : 46
FOR                  : 
FOREACH              : 
GREATER              : 57
GREATEREQUAL         : 58
GREATEREQUAL_STRING  : 65
GREATER_STRING       : 64
GROSSARROW           : 
HEX                  : 45
ID                   : 4 5 6 16 17 18 49
IF                   : 29 30
INTEGER              : 44
ISEQUAL              : 55
ISEQUAL_STRING       : 62
LAST                 : 
LBLOCK               : 6 29 30 30 32
LBRACKET             : 
LESS                 : 59
LESSEQUAL            : 60
LESSEQUAL_STRING     : 67
LESS_STRING          : 66
LPAREN               : 6 9 10 29 30 32 48 49
MINUS                : 40 51
MINUS_ASSIGN         : 21
MODULUS              : 43
MOD_ASSIGN           : 24
MULTIPLY_ASSIGN      : 22
MY                   : 7 8 9 10
NEXT                 : 
NOT                  : 
NOTEQUAL             : 56
NOTEQUAL_STRING      : 63
OR                   : 
PACKAGE              : 5
PERCENT              : 18
PLUS                 : 39 52
PLUS_ASSIGN          : 20
POW_ASSIGN           : 25
PRINT                : 31
RBLOCK               : 6 29 30 30 32
RBRACKET             : 
RETURN               : 
RPAREN               : 6 9 10 29 30 32 48 49
SEMICOLON            : 4 5 7 8 9 10 26 27
STRING               : 31 47
SUB                  : 6
TIMES                : 41
UNTIL                : 
USE                  : 4
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

assign_type          : 8 10
comma_expression     : 33 34 36
comma_var_type       : 11 13
declaration          : 2 3
declaration_list     : 1 2
empty                : 12 15 28 35
expression           : 8 10 37 38 39 39 40 40 41 41 42 42 43 43 48 51 52
expression_list      : 49
expression_listitems : 33 36
param_list           : 6 9 10
program              : 0
relop                : 29 30 32
relop_number         : 53
relop_string         : 54
statement            : 26 27
statement_list       : 6 26 29 30 30 32
var_type             : 7 8 11 13 14 50

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . USE ID SEMICOLON
    (5) declaration -> . PACKAGE ID SEMICOLON
    (6) declaration -> . SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
    (7) declaration -> . MY var_type SEMICOLON
    (8) declaration -> . MY var_type assign_type expression SEMICOLON
    (9) declaration -> . MY LPAREN param_list RPAREN SEMICOLON
    (10) declaration -> . MY LPAREN param_list RPAREN assign_type expression SEMICOLON

    USE             shift and go to state 4
    PACKAGE         shift and go to state 5
    SUB             shift and go to state 6
    MY              shift and go to state 7

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . USE ID SEMICOLON
    (5) declaration -> . PACKAGE ID SEMICOLON
    (6) declaration -> . SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
    (7) declaration -> . MY var_type SEMICOLON
    (8) declaration -> . MY var_type assign_type expression SEMICOLON
    (9) declaration -> . MY LPAREN param_list RPAREN SEMICOLON
    (10) declaration -> . MY LPAREN param_list RPAREN assign_type expression SEMICOLON

    $end            reduce using rule 1 (program -> declaration_list .)
    USE             shift and go to state 4
    PACKAGE         shift and go to state 5
    SUB             shift and go to state 6
    MY              shift and go to state 7

    declaration                    shift and go to state 8

state 3

    (3) declaration_list -> declaration .

    USE             reduce using rule 3 (declaration_list -> declaration .)
    PACKAGE         reduce using rule 3 (declaration_list -> declaration .)
    SUB             reduce using rule 3 (declaration_list -> declaration .)
    MY              reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> USE . ID SEMICOLON

    ID              shift and go to state 9


state 5

    (5) declaration -> PACKAGE . ID SEMICOLON

    ID              shift and go to state 10


state 6

    (6) declaration -> SUB . ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK

    ID              shift and go to state 11


state 7

    (7) declaration -> MY . var_type SEMICOLON
    (8) declaration -> MY . var_type assign_type expression SEMICOLON
    (9) declaration -> MY . LPAREN param_list RPAREN SEMICOLON
    (10) declaration -> MY . LPAREN param_list RPAREN assign_type expression SEMICOLON
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID

    LPAREN          shift and go to state 13
    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16

    var_type                       shift and go to state 12

state 8

    (2) declaration_list -> declaration_list declaration .

    USE             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PACKAGE         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    SUB             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    MY              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 9

    (4) declaration -> USE ID . SEMICOLON

    SEMICOLON       shift and go to state 17


state 10

    (5) declaration -> PACKAGE ID . SEMICOLON

    SEMICOLON       shift and go to state 18


state 11

    (6) declaration -> SUB ID . LPAREN param_list RPAREN LBLOCK statement_list RBLOCK

    LPAREN          shift and go to state 19


state 12

    (7) declaration -> MY var_type . SEMICOLON
    (8) declaration -> MY var_type . assign_type expression SEMICOLON
    (19) assign_type -> . ASSIGN
    (20) assign_type -> . PLUS_ASSIGN
    (21) assign_type -> . MINUS_ASSIGN
    (22) assign_type -> . MULTIPLY_ASSIGN
    (23) assign_type -> . DIVIDE_ASSIGN
    (24) assign_type -> . MOD_ASSIGN
    (25) assign_type -> . POW_ASSIGN

    SEMICOLON       shift and go to state 20
    ASSIGN          shift and go to state 22
    PLUS_ASSIGN     shift and go to state 23
    MINUS_ASSIGN    shift and go to state 24
    MULTIPLY_ASSIGN shift and go to state 25
    DIVIDE_ASSIGN   shift and go to state 26
    MOD_ASSIGN      shift and go to state 27
    POW_ASSIGN      shift and go to state 28

    assign_type                    shift and go to state 21

state 13

    (9) declaration -> MY LPAREN . param_list RPAREN SEMICOLON
    (10) declaration -> MY LPAREN . param_list RPAREN assign_type expression SEMICOLON
    (11) param_list -> . var_type comma_var_type
    (12) param_list -> . empty
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID
    (69) empty -> .

    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16
    RPAREN          reduce using rule 69 (empty -> .)

    param_list                     shift and go to state 29
    var_type                       shift and go to state 30
    empty                          shift and go to state 31

state 14

    (16) var_type -> DOLLAR . ID

    ID              shift and go to state 32


state 15

    (17) var_type -> AT . ID

    ID              shift and go to state 33


state 16

    (18) var_type -> PERCENT . ID

    ID              shift and go to state 34


state 17

    (4) declaration -> USE ID SEMICOLON .

    USE             reduce using rule 4 (declaration -> USE ID SEMICOLON .)
    PACKAGE         reduce using rule 4 (declaration -> USE ID SEMICOLON .)
    SUB             reduce using rule 4 (declaration -> USE ID SEMICOLON .)
    MY              reduce using rule 4 (declaration -> USE ID SEMICOLON .)
    $end            reduce using rule 4 (declaration -> USE ID SEMICOLON .)


state 18

    (5) declaration -> PACKAGE ID SEMICOLON .

    USE             reduce using rule 5 (declaration -> PACKAGE ID SEMICOLON .)
    PACKAGE         reduce using rule 5 (declaration -> PACKAGE ID SEMICOLON .)
    SUB             reduce using rule 5 (declaration -> PACKAGE ID SEMICOLON .)
    MY              reduce using rule 5 (declaration -> PACKAGE ID SEMICOLON .)
    $end            reduce using rule 5 (declaration -> PACKAGE ID SEMICOLON .)


state 19

    (6) declaration -> SUB ID LPAREN . param_list RPAREN LBLOCK statement_list RBLOCK
    (11) param_list -> . var_type comma_var_type
    (12) param_list -> . empty
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID
    (69) empty -> .

    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16
    RPAREN          reduce using rule 69 (empty -> .)

    param_list                     shift and go to state 35
    var_type                       shift and go to state 30
    empty                          shift and go to state 31

state 20

    (7) declaration -> MY var_type SEMICOLON .

    USE             reduce using rule 7 (declaration -> MY var_type SEMICOLON .)
    PACKAGE         reduce using rule 7 (declaration -> MY var_type SEMICOLON .)
    SUB             reduce using rule 7 (declaration -> MY var_type SEMICOLON .)
    MY              reduce using rule 7 (declaration -> MY var_type SEMICOLON .)
    $end            reduce using rule 7 (declaration -> MY var_type SEMICOLON .)


state 21

    (8) declaration -> MY var_type assign_type . expression SEMICOLON
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULUS expression
    (44) expression -> . INTEGER
    (45) expression -> . HEX
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . ID LPAREN expression_list RPAREN
    (50) expression -> . var_type
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID

    INTEGER         shift and go to state 40
    HEX             shift and go to state 41
    FLOAT           shift and go to state 42
    STRING          shift and go to state 43
    LPAREN          shift and go to state 44
    ID              shift and go to state 45
    MINUS           shift and go to state 39
    PLUS            shift and go to state 38
    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16

    var_type                       shift and go to state 36
    expression                     shift and go to state 37

state 22

    (19) assign_type -> ASSIGN .

    INTEGER         reduce using rule 19 (assign_type -> ASSIGN .)
    HEX             reduce using rule 19 (assign_type -> ASSIGN .)
    FLOAT           reduce using rule 19 (assign_type -> ASSIGN .)
    STRING          reduce using rule 19 (assign_type -> ASSIGN .)
    LPAREN          reduce using rule 19 (assign_type -> ASSIGN .)
    ID              reduce using rule 19 (assign_type -> ASSIGN .)
    MINUS           reduce using rule 19 (assign_type -> ASSIGN .)
    PLUS            reduce using rule 19 (assign_type -> ASSIGN .)
    DOLLAR          reduce using rule 19 (assign_type -> ASSIGN .)
    AT              reduce using rule 19 (assign_type -> ASSIGN .)
    PERCENT         reduce using rule 19 (assign_type -> ASSIGN .)


state 23

    (20) assign_type -> PLUS_ASSIGN .

    INTEGER         reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    HEX             reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    FLOAT           reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    STRING          reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    LPAREN          reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    ID              reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    MINUS           reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    PLUS            reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    DOLLAR          reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    AT              reduce using rule 20 (assign_type -> PLUS_ASSIGN .)
    PERCENT         reduce using rule 20 (assign_type -> PLUS_ASSIGN .)


state 24

    (21) assign_type -> MINUS_ASSIGN .

    INTEGER         reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    HEX             reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    FLOAT           reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    STRING          reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    LPAREN          reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    ID              reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    MINUS           reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    PLUS            reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    DOLLAR          reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    AT              reduce using rule 21 (assign_type -> MINUS_ASSIGN .)
    PERCENT         reduce using rule 21 (assign_type -> MINUS_ASSIGN .)


state 25

    (22) assign_type -> MULTIPLY_ASSIGN .

    INTEGER         reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    HEX             reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    FLOAT           reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    STRING          reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    LPAREN          reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    ID              reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    MINUS           reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    PLUS            reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    DOLLAR          reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    AT              reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)
    PERCENT         reduce using rule 22 (assign_type -> MULTIPLY_ASSIGN .)


state 26

    (23) assign_type -> DIVIDE_ASSIGN .

    INTEGER         reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    HEX             reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    FLOAT           reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    STRING          reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    LPAREN          reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    ID              reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    MINUS           reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    PLUS            reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    DOLLAR          reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    AT              reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)
    PERCENT         reduce using rule 23 (assign_type -> DIVIDE_ASSIGN .)


state 27

    (24) assign_type -> MOD_ASSIGN .

    INTEGER         reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    HEX             reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    FLOAT           reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    STRING          reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    LPAREN          reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    ID              reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    MINUS           reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    PLUS            reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    DOLLAR          reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    AT              reduce using rule 24 (assign_type -> MOD_ASSIGN .)
    PERCENT         reduce using rule 24 (assign_type -> MOD_ASSIGN .)


state 28

    (25) assign_type -> POW_ASSIGN .

    INTEGER         reduce using rule 25 (assign_type -> POW_ASSIGN .)
    HEX             reduce using rule 25 (assign_type -> POW_ASSIGN .)
    FLOAT           reduce using rule 25 (assign_type -> POW_ASSIGN .)
    STRING          reduce using rule 25 (assign_type -> POW_ASSIGN .)
    LPAREN          reduce using rule 25 (assign_type -> POW_ASSIGN .)
    ID              reduce using rule 25 (assign_type -> POW_ASSIGN .)
    MINUS           reduce using rule 25 (assign_type -> POW_ASSIGN .)
    PLUS            reduce using rule 25 (assign_type -> POW_ASSIGN .)
    DOLLAR          reduce using rule 25 (assign_type -> POW_ASSIGN .)
    AT              reduce using rule 25 (assign_type -> POW_ASSIGN .)
    PERCENT         reduce using rule 25 (assign_type -> POW_ASSIGN .)


state 29

    (9) declaration -> MY LPAREN param_list . RPAREN SEMICOLON
    (10) declaration -> MY LPAREN param_list . RPAREN assign_type expression SEMICOLON

    RPAREN          shift and go to state 46


state 30

    (11) param_list -> var_type . comma_var_type
    (13) comma_var_type -> . comma_var_type COMMA var_type
    (14) comma_var_type -> . COMMA var_type
    (15) comma_var_type -> . empty
    (69) empty -> .

  ! shift/reduce conflict for COMMA resolved as shift
    COMMA           shift and go to state 48
    RPAREN          reduce using rule 69 (empty -> .)

  ! COMMA           [ reduce using rule 69 (empty -> .) ]

    comma_var_type                 shift and go to state 47
    empty                          shift and go to state 49

state 31

    (12) param_list -> empty .

    RPAREN          reduce using rule 12 (param_list -> empty .)


state 32

    (16) var_type -> DOLLAR ID .

    SEMICOLON       reduce using rule 16 (var_type -> DOLLAR ID .)
    ASSIGN          reduce using rule 16 (var_type -> DOLLAR ID .)
    PLUS_ASSIGN     reduce using rule 16 (var_type -> DOLLAR ID .)
    MINUS_ASSIGN    reduce using rule 16 (var_type -> DOLLAR ID .)
    MULTIPLY_ASSIGN reduce using rule 16 (var_type -> DOLLAR ID .)
    DIVIDE_ASSIGN   reduce using rule 16 (var_type -> DOLLAR ID .)
    MOD_ASSIGN      reduce using rule 16 (var_type -> DOLLAR ID .)
    POW_ASSIGN      reduce using rule 16 (var_type -> DOLLAR ID .)
    COMMA           reduce using rule 16 (var_type -> DOLLAR ID .)
    RPAREN          reduce using rule 16 (var_type -> DOLLAR ID .)
    PLUS            reduce using rule 16 (var_type -> DOLLAR ID .)
    MINUS           reduce using rule 16 (var_type -> DOLLAR ID .)
    TIMES           reduce using rule 16 (var_type -> DOLLAR ID .)
    DIVIDE          reduce using rule 16 (var_type -> DOLLAR ID .)
    MODULUS         reduce using rule 16 (var_type -> DOLLAR ID .)


state 33

    (17) var_type -> AT ID .

    SEMICOLON       reduce using rule 17 (var_type -> AT ID .)
    ASSIGN          reduce using rule 17 (var_type -> AT ID .)
    PLUS_ASSIGN     reduce using rule 17 (var_type -> AT ID .)
    MINUS_ASSIGN    reduce using rule 17 (var_type -> AT ID .)
    MULTIPLY_ASSIGN reduce using rule 17 (var_type -> AT ID .)
    DIVIDE_ASSIGN   reduce using rule 17 (var_type -> AT ID .)
    MOD_ASSIGN      reduce using rule 17 (var_type -> AT ID .)
    POW_ASSIGN      reduce using rule 17 (var_type -> AT ID .)
    COMMA           reduce using rule 17 (var_type -> AT ID .)
    RPAREN          reduce using rule 17 (var_type -> AT ID .)
    PLUS            reduce using rule 17 (var_type -> AT ID .)
    MINUS           reduce using rule 17 (var_type -> AT ID .)
    TIMES           reduce using rule 17 (var_type -> AT ID .)
    DIVIDE          reduce using rule 17 (var_type -> AT ID .)
    MODULUS         reduce using rule 17 (var_type -> AT ID .)


state 34

    (18) var_type -> PERCENT ID .

    SEMICOLON       reduce using rule 18 (var_type -> PERCENT ID .)
    ASSIGN          reduce using rule 18 (var_type -> PERCENT ID .)
    PLUS_ASSIGN     reduce using rule 18 (var_type -> PERCENT ID .)
    MINUS_ASSIGN    reduce using rule 18 (var_type -> PERCENT ID .)
    MULTIPLY_ASSIGN reduce using rule 18 (var_type -> PERCENT ID .)
    DIVIDE_ASSIGN   reduce using rule 18 (var_type -> PERCENT ID .)
    MOD_ASSIGN      reduce using rule 18 (var_type -> PERCENT ID .)
    POW_ASSIGN      reduce using rule 18 (var_type -> PERCENT ID .)
    COMMA           reduce using rule 18 (var_type -> PERCENT ID .)
    RPAREN          reduce using rule 18 (var_type -> PERCENT ID .)
    PLUS            reduce using rule 18 (var_type -> PERCENT ID .)
    MINUS           reduce using rule 18 (var_type -> PERCENT ID .)
    TIMES           reduce using rule 18 (var_type -> PERCENT ID .)
    DIVIDE          reduce using rule 18 (var_type -> PERCENT ID .)
    MODULUS         reduce using rule 18 (var_type -> PERCENT ID .)


state 35

    (6) declaration -> SUB ID LPAREN param_list . RPAREN LBLOCK statement_list RBLOCK

    RPAREN          shift and go to state 50


state 36

    (50) expression -> var_type .

    SEMICOLON       reduce using rule 50 (expression -> var_type .)
    PLUS            reduce using rule 50 (expression -> var_type .)
    MINUS           reduce using rule 50 (expression -> var_type .)
    TIMES           reduce using rule 50 (expression -> var_type .)
    DIVIDE          reduce using rule 50 (expression -> var_type .)
    MODULUS         reduce using rule 50 (expression -> var_type .)
    RPAREN          reduce using rule 50 (expression -> var_type .)
    COMMA           reduce using rule 50 (expression -> var_type .)


state 37

    (8) declaration -> MY var_type assign_type expression . SEMICOLON
    (39) expression -> expression . PLUS expression
    (40) expression -> expression . MINUS expression
    (41) expression -> expression . TIMES expression
    (42) expression -> expression . DIVIDE expression
    (43) expression -> expression . MODULUS expression

    SEMICOLON       shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 55
    MODULUS         shift and go to state 56


state 38

    (52) expression -> PLUS . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULUS expression
    (44) expression -> . INTEGER
    (45) expression -> . HEX
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . ID LPAREN expression_list RPAREN
    (50) expression -> . var_type
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID

    INTEGER         shift and go to state 40
    HEX             shift and go to state 41
    FLOAT           shift and go to state 42
    STRING          shift and go to state 43
    LPAREN          shift and go to state 44
    ID              shift and go to state 45
    MINUS           shift and go to state 39
    PLUS            shift and go to state 38
    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16

    expression                     shift and go to state 57
    var_type                       shift and go to state 36

state 39

    (51) expression -> MINUS . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULUS expression
    (44) expression -> . INTEGER
    (45) expression -> . HEX
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . ID LPAREN expression_list RPAREN
    (50) expression -> . var_type
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID

    INTEGER         shift and go to state 40
    HEX             shift and go to state 41
    FLOAT           shift and go to state 42
    STRING          shift and go to state 43
    LPAREN          shift and go to state 44
    ID              shift and go to state 45
    MINUS           shift and go to state 39
    PLUS            shift and go to state 38
    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16

    expression                     shift and go to state 58
    var_type                       shift and go to state 36

state 40

    (44) expression -> INTEGER .

    SEMICOLON       reduce using rule 44 (expression -> INTEGER .)
    PLUS            reduce using rule 44 (expression -> INTEGER .)
    MINUS           reduce using rule 44 (expression -> INTEGER .)
    TIMES           reduce using rule 44 (expression -> INTEGER .)
    DIVIDE          reduce using rule 44 (expression -> INTEGER .)
    MODULUS         reduce using rule 44 (expression -> INTEGER .)
    RPAREN          reduce using rule 44 (expression -> INTEGER .)
    COMMA           reduce using rule 44 (expression -> INTEGER .)


state 41

    (45) expression -> HEX .

    SEMICOLON       reduce using rule 45 (expression -> HEX .)
    PLUS            reduce using rule 45 (expression -> HEX .)
    MINUS           reduce using rule 45 (expression -> HEX .)
    TIMES           reduce using rule 45 (expression -> HEX .)
    DIVIDE          reduce using rule 45 (expression -> HEX .)
    MODULUS         reduce using rule 45 (expression -> HEX .)
    RPAREN          reduce using rule 45 (expression -> HEX .)
    COMMA           reduce using rule 45 (expression -> HEX .)


state 42

    (46) expression -> FLOAT .

    SEMICOLON       reduce using rule 46 (expression -> FLOAT .)
    PLUS            reduce using rule 46 (expression -> FLOAT .)
    MINUS           reduce using rule 46 (expression -> FLOAT .)
    TIMES           reduce using rule 46 (expression -> FLOAT .)
    DIVIDE          reduce using rule 46 (expression -> FLOAT .)
    MODULUS         reduce using rule 46 (expression -> FLOAT .)
    RPAREN          reduce using rule 46 (expression -> FLOAT .)
    COMMA           reduce using rule 46 (expression -> FLOAT .)


state 43

    (47) expression -> STRING .

    SEMICOLON       reduce using rule 47 (expression -> STRING .)
    PLUS            reduce using rule 47 (expression -> STRING .)
    MINUS           reduce using rule 47 (expression -> STRING .)
    TIMES           reduce using rule 47 (expression -> STRING .)
    DIVIDE          reduce using rule 47 (expression -> STRING .)
    MODULUS         reduce using rule 47 (expression -> STRING .)
    RPAREN          reduce using rule 47 (expression -> STRING .)
    COMMA           reduce using rule 47 (expression -> STRING .)


state 44

    (48) expression -> LPAREN . expression RPAREN
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULUS expression
    (44) expression -> . INTEGER
    (45) expression -> . HEX
    (46) expression -> . FLOAT
    (47) expression -> . STRING
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . ID LPAREN expression_list RPAREN
    (50) expression -> . var_type
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (16) var_type -> . DOLLAR ID
    (17) var_type -> . AT ID
    (18) var_type -> . PERCENT ID

    INTEGER         shift and go to state 40
    HEX             shift and go to state 41
    FLOAT           shift and go to state 42
    STRING          shift and go to state 43
    LPAREN          shift and go to state 44
    ID              shift and go to state 45
    MINUS           shift and go to state 39
    PLUS            shift and go to state 38
    DOLLAR          shift and go to state 14
    AT              shift and go to state 15
    PERCENT         shift and go to state 16

    expression                     shift and go to state 59
    var_type                       shift and go to state 36

state 45

    (49) expression -> ID . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 60


state 46
